--- a/style.css
+++ b/style.css
@@ -115,13 +115,14 @@ header {
   background-color:black
 }
 
-a {
+button {
   background: rec;
   color: #fff;
   height: 60px;
   width: 150px;
   border: 0;
   transition: all 0.3s ease 0s;
+\colo
 }
 
 section {
