--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ section {
 }
 
 
-button  {
+a  {
   background-color: red;
   color: white;
   text-align: center;
@@ -97,17 +97,17 @@ button  {
   
 }
 
-button a {
+a {
     text-decoration:none;
     color:white;
     
 }
-button:hover {
+a:hover {
   background-color: #a20000; 
   color: white;
 }
 
-header button{
+header a{
   background-color:black;
 }
 
@@ -115,14 +115,13 @@ header {
   background-color:black
 }
 
-button {
+a {
   background: red;
   color: #fff;
   height: 60px;
   width: 150px;
   border: 0;
   transition: all 0.3s ease 0s;
-\colo
 }
 
 section {
