--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ a {
   background: red;
   color: #fff;
   height: 60px;
+    line-height: 60px;
   width: 150px;
   border: 0;
   transition: all 0.3s ease 0s;
