--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ border-radius: 150px;
 header a {
   display:inline-block;
   text-decoration: none;
-    font-size: 40px;
+    font-size: 30fx;
     padding:100px;
 }
 
