--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ border-radius: 150px;
 header a {
   display:inline-block;
   text-decoration: none;
-    font-size: 30fx;
-    padding:100px;
+    font-size: 30px;
+    padding:30px;
 }
 
 
