--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header a {
   display:inline-block;
   text-decoration: none;
     font-size: 25px;
-    padding:30px;
+    padding:30px 20 0 20;
 }
 
 
