--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header a {
   display:inline-block;
   text-decoration: none;
     font-size: 25px;
-    padding:30px 20 0 20;
+    padding:30px;
 }
 
 
@@ -138,4 +138,8 @@ a {
 
 #awesome {
     padding-top: 
+}
+
+#qbox {
+    
 }
