--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ a {
 #qbox {
         width: 200px;
     height: 60px;
-    font-size: 35px;
+    font-size: 43px;
     padding: 20px;
+    font-family:impact;
 }
