--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color:black;
+    color:white;
 }
 
 #name h3 {
@@ -117,7 +118,7 @@ a {
     display: inline-block;
   background: red;
   color: #fff;
-  height: 60px;
+  height: 100px;
     line-height: 60px;
   width: 150px;
   border: 0;
@@ -155,4 +156,12 @@ iframe {
     left:0px;
     bottom:0px;
     
+}
+
+h2 {
+    padding:30px;
+}
+
+font {
+    font-family: Marker Felt;
 }
