--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ a {
     font-size: 43px;
     padding: 20px;
     font-family:impact;
-    padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 iframe {
