--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Open Sans", sans-serif;
   background-color:black;
     color:white;
+    background-attachment: fixed;
 }
 
 #name h3 {
