--- a/style.css
+++ b/style.css
@@ -167,3 +167,13 @@ h2 {
 font {
     font-family: Marker Felt;
 }
+
+html {
+    overflow: hidden;
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    overflow: auto;
+}
