--- a/style.css
+++ b/style.css
@@ -26,8 +26,11 @@ border-radius: 150px;
 header a {
   display:inline-block;
   text-decoration: none;
-    font-size: 20px;
-    padding:30px;
+    font-size: 25px;
+    padding:20px;
+    border-right: 1px solid white;
+    border-left: 1px solid white;
+    
 }
 
 
@@ -177,3 +180,4 @@ body {
     height: 100%;
     overflow: auto;
 }
+
